src/FWlib/peripheral_ssp.h

/*
 * Description:
 * This specifies the frame format options
 */
typedef enum apSSP_xFrameFormat
{
    apSSP_FRAMEFORMAT_MOTOROLASPI       = 0x0,       /* Motorola SPI frame format */
    apSSP_FRAMEFORMAT_TISYNCHRONOUS     = 0x1,       /* TI synchronous serial frame format */
    apSSP_FRAMEFORMAT_NATIONALMICROWIRE = 0x2        /* National Microwire frame format */
} apSSP_eFrameFormat;
/*
 * Description:
 * This specifies the data size select options
 */
typedef enum apSSP_xDataSize
{
    apSSP_DATASIZE_4BITS  = 0x3,     /*  4 bit data */
    apSSP_DATASIZE_5BITS  = 0x4,     /*  5 bit data */
    apSSP_DATASIZE_6BITS  = 0x5,     /*  6 bit data */
    apSSP_DATASIZE_7BITS  = 0x6,     /*  7 bit data */
    apSSP_DATASIZE_8BITS  = 0x7,     /*  8 bit data */
    apSSP_DATASIZE_9BITS  = 0x8,     /*  9 bit data */
    apSSP_DATASIZE_10BITS = 0x9,     /* 10 bit data */
    apSSP_DATASIZE_11BITS = 0xA,     /* 11 bit data */
    apSSP_DATASIZE_12BITS = 0xB,     /* 12 bit data */
    apSSP_DATASIZE_13BITS = 0xC,     /* 13 bit data */
    apSSP_DATASIZE_14BITS = 0xD,     /* 14 bit data */
    apSSP_DATASIZE_15BITS = 0xE,     /* 15 bit data */
    apSSP_DATASIZE_16BITS = 0xF      /* 16 bit data */
} apSSP_eDataSize;
/*
 * Description:
 * This specifies the SCLK phase options. It is only applicable to
 * Motorola SPI frame format.
 */
typedef enum apSSP_xSCLKPhase
{
    apSSP_SCLKPHASE_TRAILINGEDGE = 0,   /* Data changes on trailing edge of the clock (valid on leading edge) */
    apSSP_SCLKPHASE_LEADINGEDGE  = 1    /* Data changes on leading edge of the clock (valid on trailing edge) */
} apSSP_eSCLKPhase;
/*
 * Description:
 * This specifies the SCLK polarity options. It is only applicable to
 * Motorola SPI frame format.
 */
typedef enum apSSP_xSCLKPolarity
{
    apSSP_SCLKPOLARITY_IDLELOW   = 0,   /* Clock low when idle and pulsed high */
    apSSP_SCLKPOLARITY_IDLEHIGH  = 1    /* Clock high when idle and pulsed low */
} apSSP_eSCLKPolarity;
/*
 * Description:
 * This specifies the master/slave mode options
 */
typedef enum apSSP_xMasterSlaveMode
{
    apSSP_MASTER = 0,   /* Device is Master */
    apSSP_SLAVE  = 1    /* Device is Slave  */
} apSSP_eMasterSlaveMode;
/*
 * Description:
 * This specifies the slave output mode options
 */
typedef enum apSSP_xSlaveOutput
{
    apSSP_SLAVEOUTPUTENABLED  = 0,  /* SSP may drive output in slave mode */
    apSSP_SLAVEOUTPUTDISABLED = 1   /* SSP must not drive output in slave mode */
} apSSP_eSlaveOutput;
/*
 * Description:
 * This specifies the loop back mode options
 */
typedef enum apSSP_xLoopBackMode
{
    apSSP_LOOPBACKOFF = 0,      /* Loop back off, normal serial port operation */
    apSSP_LOOPBACKON  = 1       /* Loop back on, Output of transmit
                                 * serial shifter connected to input of
                                 * receive serial shifter internally
                                 */
} apSSP_eLoopBackMode;
/*
 * Description:
 * This specifies the DMA mode options.
 */
typedef enum apSSP_xDMAMode
{
    apSSP_DMA_TX_ON = 1,
    apSSP_DMA_TX_OFF,
    apSSP_DMA_RX_ON,
    apSSP_DMA_RX_OFF
} apSSP_eDMAMode;
/*
 * Description:
 * The data structure to hold parameters to control SSP device.
 */
typedef struct apSSP_xDeviceControlBlock
{
    uint8_t ClockPrescale;           /* Clock rate prescale divisor */
    uint8_t ClockRate;               /* Clock rate divisor */
    apSSP_eSCLKPhase eSCLKPhase;
    apSSP_eSCLKPolarity eSCLKPolarity;
    apSSP_eFrameFormat eFrameFormat;
    apSSP_eDataSize eDataSize;
    apSSP_eLoopBackMode eLoopBackMode;
    apSSP_eMasterSlaveMode eMasterSlaveMode;
    apSSP_eSlaveOutput eSlaveOutput;

} apSSP_sDeviceControlBlock;
//==============================================================================================//
void apSSP_Initialize (SSP_TypeDef * SSP_Ptr);
void apSSP_DeviceParametersSet(SSP_TypeDef * SSP_Ptr, apSSP_sDeviceControlBlock *pParam);
void apSSP_DeviceParametersGet(SSP_TypeDef * SSP_Ptr, apSSP_sDeviceControlBlock *pParam);
void apSSP_DeviceEnable(SSP_TypeDef * SSP_Ptr);
uint32_t apSSP_GetIntRawStatus(SSP_TypeDef * SSP_Ptr);
void apSSP_ClearInt(SSP_TypeDef * SSP_Ptr, uint32_t bits);
void apSSP_DeviceDisable(SSP_TypeDef * SSP_Ptr);
void apSSP_DeviceReceiveEnable(SSP_TypeDef * SSP_Ptr);
void apSSP_DeviceReceiveOverrunEnable(SSP_TypeDef * SSP_Ptr);
void apSSP_DeviceReceiveDisable(SSP_TypeDef * SSP_Ptr);
void apSSP_DeviceTransmitEnable(SSP_TypeDef * SSP_Ptr);
void apSSP_DeviceTransmitDisable(SSP_TypeDef * SSP_Ptr);
void apSSP_DeviceReceiveClear(SSP_TypeDef * SSP_Ptr);
uint8_t apSSP_DeviceBusyGet(SSP_TypeDef * SSP_Ptr);
void apSSP_WriteFIFO(SSP_TypeDef * SSP_Ptr, uint16_t data);
uint16_t apSSP_ReadFIFO(SSP_TypeDef * SSP_Ptr);
uint8_t apSSP_RxFifoFull(SSP_TypeDef * SSP_Ptr);
uint8_t apSSP_RxFifoNotEmpty(SSP_TypeDef * SSP_Ptr);
uint8_t apSSP_TxFifoNotFull(SSP_TypeDef * SSP_Ptr);
uint8_t apSSP_TxFifoEmpty(SSP_TypeDef * SSP_Ptr);
typedef enum
{
  SPI_CPHA_ODD_SCLK_EDGES = 0,
  SPI_CPHA_EVEN_SCLK_EDGES = 1
}SPI_TransFmt_CPHA_e;
typedef enum
{
  SPI_CPOL_SCLK_LOW_IN_IDLE_STATES = 0,
  SPI_CPOL_SCLK_HIGH_IN_IDLE_STATES = 1
}SPI_TransFmt_CPOL_e;
/* SPI Master/Slave mode selection 0x0: Master mode 0x1: Slave mode */
typedef enum
{
  SPI_SLVMODE_MASTER_MODE = 0,
  SPI_SLVMODE_SLAVE_MODE = 1
}SPI_TransFmt_SlvMode_e;
/* Transfer data with the least significant bit first */
typedef enum
{
  SPI_LSB_MOST_SIGNIFICANT_BIT_FIRST = 0,
  SPI_LSB_LEAST_SIGNIFICANT_BIT_FIRST = 1
}SPI_TransFmt_LSB_e;
typedef enum
{
  SPI_ADDRLEN_1_BYTE = 0,
  SPI_ADDRLEN_2_BYTES = 1,
  SPI_ADDRLEN_3_BYTES = 2,
  SPI_ADDRLEN_4_BYTES = 3
}SPI_TransFmt_AddrLen_e;
/* The length of each data unit in bits
  The actual bit number of a data unit is (DataLen + 1) */
typedef enum
{
  SPI_DATALEN_8_BITS = 0x7,
  SPI_DATALEN_16_BITS = 0xf,
  SPI_DATALEN_32_BITS = 0x1f
}SPI_TransFmt_DataLen_e;
/* bit width 9 bit */
typedef uint16_t SPI_TransCtrl_TransCnt;
/* SPI data phase format */
typedef enum
{
  SPI_DUALQUAD_REGULAR_MODE = 0,
  SPI_DUALQUAD_DUAL_IO_MODE = 1,
  SPI_DUALQUAD_QUAD_IO_MODE = 2
}SPI_TransCtrl_DualQuad_e;
/* Transfer mode */
typedef enum
{
  SPI_TRANSMODE_WRITE_READ_SAME_TIME = 0,
  SPI_TRANSMODE_WRITE_ONLY = 1,
  SPI_TRANSMODE_READ_ONLY = 2,
  SPI_TRANSMODE_WRITE_READ = 3,
  SPI_TRANSMODE_READ_WRITE = 4,
  SPI_TRANSMODE_WRITE_DUMMY_READ = 5,
  SPI_TRANSMODE_READ_DUMMY_WRITE = 6,
  SPI_TRANSMODE_DUMMY_WRITE = 8,
  SPI_TRANSMODE_DUMMY_READ = 9
}SPI_TransCtrl_TransMode_e;
/* SPI address phase enable (Master mode only) 0x0: Disable the address phase
0x1: Enable the address phase */
typedef enum
{
  SPI_ADDREN_DISABLE = 0,
  SPI_ADDREN_ENABLE = 1
}SPI_TransCtrl_AddrEn_e;
/* SPI command phase enable (Master mode only) 0x0: Disable the command phase
0x1: Enable the command phase */
typedef enum
{
  SPI_CMDEN_DISABLE = 0,
  SPI_CMDEN_ENABLE = 1
}SPI_TransCtrl_CmdEn_e;
/* Data-only mode (slave mode only) 0x0: Disable the data-only mode 0x1: Enable the data-only mode */
typedef enum
{
  SPI_SLVDATAONLY_DISABLE = 0,
  SPI_SLVDATAONLY_ENABLE = 1
}SPI_TransCtrl_SlvDataOnly_e;
typedef uint8_t SPI_ControlRxThres;
typedef uint8_t SPI_ControlTxThres;
typedef uint8_t SPI_InterruptEnableMask;/* bit mask combined from above interrupt bit */
typedef uint8_t  SPI_InterfaceTimingSclkDiv;// spi interface clock / (2 * (eSclkDiv + 1))
/*
 * Description:
 * The data structure to hold parameters to control SSP device.
 */
typedef struct apSSP_xDeviceControlBlock
{
  SPI_InterfaceTimingSclkDiv   eSclkDiv; /* Clock rate divisor */
  SPI_TransFmt_CPHA_e          eSCLKPhase;/* odd or even edge, used to for spi mode */
  SPI_TransFmt_CPOL_e          eSCLKPolarity;/* idle low or idle high, used to for spi mode */
  /* Transfer data with the least significant bit first 0x0: Most significant bit first 0x1: Least significant bit first */
  SPI_TransFmt_LSB_e           eLsbMsbOrder;
  /* The length of each data unit in bits The actual bit number of a data unit is (DataLen + 1) */
  SPI_TransFmt_DataLen_e       eDataSize;
  /* SPI Master/Slave mode selection 0x0: Master mode 0x1: Slave mode */
  SPI_TransFmt_SlvMode_e       eMasterSlaveMode;
  /* Transfer mode 0x0: Write and read at the same time 0x1: Write only 0x2: Read only */
  SPI_TransCtrl_TransMode_e    eReadWriteMode;
  /* SPI data phase format 0x0: Regular (Single) mode 0x2: Quad I/O mode */
  SPI_TransCtrl_DualQuad_e     eQuadMode;
  /* Transfer count for write/read data, eg. WrTranCnt indicates the number of units of data to be transmitted */
  SPI_TransCtrl_TransCnt       eWriteTransCnt;/* 9 bit width */
  SPI_TransCtrl_TransCnt       eReadTransCnt;/* 9 bit width */
  /* SPI address phase enable (Master mode only) 0x0: Disable the address phase 0x1: Enable the address phase */
  SPI_TransCtrl_AddrEn_e       eAddrEn;
  /* SPI command phase enable (Master mode only) 0x0: Disable the command phase 0x1: Enable the command phase */
  SPI_TransCtrl_CmdEn_e        eCmdEn;
  /* check bit definition of Int Register */
  SPI_InterruptEnableMask      eInterruptMask;
  /* Transmit (TX) FIFO Threshold, Interrupt will be triggered if TX data cnt less than TxThres*/
  SPI_ControlTxThres           TxThres;
  /* Receive (RX) FIFO Threshold, Interrupt will be triggered if RX data cnt exceed RxThres*/
  SPI_ControlRxThres           RxThres;
  /* Data-only mode (slave mode only) 0x0: Disable the data-only mode 0x1: Enable the data-only mode */
  SPI_TransCtrl_SlvDataOnly_e  SlaveDataOnly;
  SPI_TransFmt_AddrLen_e       eAddrLen;
} apSSP_sDeviceControlBlock;
/**
 * @brief Setup SPI module
 *
 * @param[in] SPI_BASE              base address
 * @param[in] pParam                various config items, see definition of apSSP_sDeviceControlBlock
 */
void apSSP_DeviceParametersSet(SSP_TypeDef *SPI_BASE, apSSP_sDeviceControlBlock *pParam);
/**
 * @brief Reset SPI module
 *
 * @param[in] SPI_BASE              base address
 */
void apSSP_Initialize (SSP_TypeDef *SPI_BASE);
/**
 * @brief Get FIFO status
 *
 * @param[in] SPI_BASE              base address
 */
uint8_t apSSP_RxFifoFull(SSP_TypeDef *SPI_BASE);
uint8_t apSSP_TxFifoEmpty(SSP_TypeDef *SPI_BASE);
/**
 * @brief Get SPI Int status
 *
 * @param[in] SPI_BASE              base address
 */
uint32_t apSSP_GetIntRawStatus(SSP_TypeDef *SPI_BASE);
/**
 * @brief Write data to FIFO
 *
 * @param[in] SPI_BASE              base address
 */
void apSSP_WriteFIFO(SSP_TypeDef *SPI_BASE, uint32_t Data);
/**
 * @brief Get FIFO data
 *
 * @param[in] SPI_BASE              base address
 */
void apSSP_ReadFIFO(SSP_TypeDef *SPI_BASE, uint32_t *Data);